<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- Notes: -->
    <!-- "movie" (vs "film") is the default, and is used for the GB locale. -->
    <!-- "favourite" is the default, modified to "favorite" for the US locale. -->
    <!-- "theatre" is the default, with "theater" for US and "cinema" for GB. -->

    <!-- App name -->
    <string name="app_name">Movie Companion</string>

    <!-- Content provider -->
    <string name="content_authority" translatable="false">uk.jumpingmouse.moviecompanion</string>

    <!-- UI, general -->
    <string name="button_ok">OK</string>

    <!-- Error messages -->
    <string name="error_title">Error</string>
    <string name="connection_required_for_sign_in">An internet connection is required to sign into %s</string>
    <string name="unknown_error_on_sign_in">Something has gone wrong, please check your internet connection or try again later</string>

    <!-- App Bar and Menu -->
    <string name="appbar_title_award_list">@string/app_name</string>
    <string name="menu_option_sign_out">Sign Out</string>
    <string name="menu_option_list_view">List View</string>
    <string name="menu_option_grid_view">Grid View</string>
    <string name="menu_option_sort">Sort</string>
    <string name="menu_option_filter">Filter</string>
    <string name="menu_option_filter_active">Active Filter</string>
    <string name="menu_option_add_to_wishlist">Add to wishlist</string>
    <string name="menu_option_remove_from_wishlist">Remove from wishlist</string>
    <string name="menu_option_add_to_watched">Mark as watched</string>
    <string name="menu_option_remove_from_watched">Mark as not watched</string>
    <string name="menu_option_add_to_favourites">Add to favourites</string>
    <string name="menu_option_remove_from_favourites">Remove from favourites</string>

    <!-- Firebase database operations -->
    <string name="databaseOperationAddNode">Add node</string>
    <string name="databaseOperationDeleteNode">Delete node</string>
    <string name="databaseOperationSuccess">Success:\n%1$s \"%2$s\" at node /%3$s</string>
    <string name="databaseOperationFailure">FAILURE:\n%1$s \"%2$s\" at node /%3$s\nError code: %4$d, details: %5$s, message: %6$s</string>

    <!-- Shared element transitions -->
    <string name="transition_movie" translatable="false">transition_movie_%s</string>

    <!-- Movie fields -->
    <!-- It is unlikely that there will be a movie whose length is 1 minute, but more
         applicable distinctions in the runtime_text could occur in other languages -->
    <plurals name="runtime_text">
        <item quantity="one">%d min</item>
        <item quantity="other">%d mins</item>
    </plurals>
    <!-- Note: Genre display values are in values/arrays.xml -->

    <!-- Award fields -->
    <string name="category_text_movie">Movie of the Week</string>
    <string name="category_text_dvd">DVD of the Week</string>
    <string name="category_text_unknown">unknown</string>

    <!-- Award List screen -->
    <string name="no_data_available">There are no movies available.</string>
    <string name="no_data_no_connection">There are no movies available. Please check your internet connection.</string>
    <string name="no_data_filter_active">There are no movies to display. This may be because none of the movies match your filter settings.</string>

    <!-- Award List Sort screen -->
    <string name="sort_title">List Order</string>
    <string name="sort_order_award_date_desc">review date, latest first</string>
    <string name="sort_order_award_date_asc">review date, earliest first</string>
    <string name="sort_order_title_asc">movie name, alphabetical</string>
    <string name="sort_order_title_desc">movie name, reverse alphabetical</string>
    <string name="sort_order_runtime_asc">runtime, shortest first</string>
    <string name="sort_order_runtime_desc">runtime, longest first</string>

    <!-- Award List Filter screen -->
    <string name="filter_title">List Filters</string>
    <string name="button_clear_filters">Clear Filters</string>

    <string name="filter_genre_title">Genre</string>

    // Genre ids
    <string name="genre_id_all" translatable="false">genre_all</string>
    <string name="genre_id_action" translatable="false">28</string>
    <string name="genre_id_adventure" translatable="false">12</string>
    <string name="genre_id_animation" translatable="false">16</string>
    <string name="genre_id_comedy" translatable="false">35</string>
    <string name="genre_id_crime" translatable="false">80</string>
    <string name="genre_id_documentary" translatable="false">99</string>
    <string name="genre_id_drama" translatable="false">18</string>
    <string name="genre_id_family" translatable="false">10751</string>
    <string name="genre_id_fantasy" translatable="false">14</string>
    <string name="genre_id_history" translatable="false">36</string>
    <string name="genre_id_horror" translatable="false">27</string>
    <string name="genre_id_music" translatable="false">10402</string>
    <string name="genre_id_mystery" translatable="false">9648</string>
    <string name="genre_id_romance" translatable="false">10749</string>
    <string name="genre_id_sci_fi" translatable="false">878</string>
    <string name="genre_id_thriller" translatable="false">53</string>
    <string name="genre_id_war" translatable="false">10752</string>
    <string name="genre_id_western" translatable="false">37</string>
    <!-- Not on TMDb -->
    <!-- <string name="genre_id_biography" translatable="false">Biography</string> -->
    <!-- <string name="genre_id_film_noir" translatable="false">Film-Noir</string> -->
    <!-- <string name="genre_id_musical" translatable="false">10402</string> -->
    <!-- <string name="genre_id_sport" translatable="false">Sport</string> -->
    <!-- On TMDb, but not used -->
    <!-- <string name="genre_id_tv_movie" translatable="false">10770</string> -->
    // Genre displayable names
    <string name="genre_name_all">All genres</string>
    <string name="genre_name_action">Action</string>
    <string name="genre_name_adventure">Adventure</string>
    <string name="genre_name_animation">Animation</string>
    <string name="genre_name_comedy">Comedy</string>
    <string name="genre_name_crime">Crime</string>
    <string name="genre_name_documentary">Documentary</string>
    <string name="genre_name_drama">Drama</string>
    <string name="genre_name_family">Family</string>
    <string name="genre_name_fantasy">Fantasy</string>
    <string name="genre_name_history">History</string>
    <string name="genre_name_horror">Horror</string>
    <string name="genre_name_music">Music</string>
    <string name="genre_name_mystery">Mystery</string>
    <string name="genre_name_romance">Romance</string>
    <string name="genre_name_sci_fi">Sci-Fi</string>
    <string name="genre_name_thriller">Thriller</string>
    <string name="genre_name_war">War</string>
    <string name="genre_name_western">Western</string>
    <!-- Not on TMDb -->
    <!-- <string name="genre_name_biography">Biography</string> -->
    <!-- <string name="genre_name_film_noir">Film-Noir</string> -->
    <!-- <string name="genre_name_musical">Musical</string> -->
    <!-- <string name="genre_name_sport">Sport</string> -->
    <!-- On TMDb, but not used -->
    <!-- <string name="genre_name_tv_movie" translatable="false">TV Movie</string> -->

    <string name="filter_wishlist_title">Wishlist</string>
    <string name="filter_wishlist_any">No filter</string>
    <string name="filter_wishlist_show">Show movies on wishlist</string>
    <string name="filter_wishlist_hide">Hide movies on wishlist</string>

    <string name="filter_watched_title">Watched Movies</string>
    <string name="filter_watched_any">No filter</string>
    <string name="filter_watched_show">Show watched movies</string>
    <string name="filter_watched_hide">Hide watched movies</string>

    <string name="filter_favourite_title">Favourite Movies</string>
    <string name="filter_favourite_any">No filter</string>
    <string name="filter_favourite_show">Show favourite movies</string>
    <string name="filter_favourite_hide">Hide favourite movies</string>

    <string name="filter_category_title">Movies / DVDs of the week</string>
    <string name="filter_category_any">No filter</string>
    <string name="filter_category_movie">Movies of the week</string>
    <string name="filter_category_dvd">DVDs of the week</string>

    <!-- View Award (Movie) screen-->
    <string name="poster_description">Movie poster</string>
    <string name="imdb_link_address" translatable="false">http://www.imdb.com/title/%s/</string>
    <string name="imdb_link_text">IMDb</string>
    <string name="imdb_link_description">Display IMDb page for movie</string>

    <string name="added_to_wishlist">added to wishlist</string>
    <string name="removed_from_wishlist">removed from wishlist</string>
    <string name="added_to_watched">marked as watched</string>
    <string name="removed_from_watched">marked as not watched</string>
    <string name="added_to_favourites">added to favourites</string>
    <string name="removed_from_favourites">removed from favourites</string>

    <!-- Example data for design view of layouts -->
    <string name="example_movie_title">The Assassination of Jesse James by the Coward Robert Ford</string>
    <string name="example_award_date">02 Jun 17</string>
    <string name="example_award_date_input">170602</string>
    <string name="example_movie_genre">Drama, Romance, Comedy, Biography</string>
    <string name="example_movie_runtime">114 mins</string>
    <!-- Short and long review for use in design view -->
    <!-- <string name="example_review">It\'s a beautiful work of art.</string> -->
    <string name="example_review" tools:ignore="Typos">At the beginning we see a man in a boat who is washed up on a desert island.  Initially he builds rafts to get away, but the rafts are constantly scuppered by an unseen sea beast which turns out to be the turtle.  In a rage he overturns the turtle, and then he starts to feel an Ancient Mariner-style remorse and empathy for this creature, and then something magical starts to happen, a transformation starts to happen.  It turns into a meditation upon existence, upon loneliness, upon companionship, upon birth, death and rebirth. It is a film which is deeply compassionate and touching and funny and affectionate and insightful and I was in love with it, I just was so swept away by it.  It\'s a beautiful beautiful work of art.</string>

    <!-- Widgets -->
    <string name="widget_title_in_cinemas">In Theatres</string>
    <string name="widget_title_latest_dvds">Latest DVDs</string>
    <string name="widget_empty_list">No movies available.</string>

    <!-- Preferences -->
    <string name="pref_award_list_sort_order_key" translatable="false">pref_award_list_sort_order_key</string>
    <string name="pref_award_list_filter_genre_key" translatable="false">pref_award_list_filter_genre_key</string>
    <string name="pref_award_list_filter_wishlist_key" translatable="false">pref_award_list_filter_wishlist_key</string>
    <string name="pref_award_list_filter_watched_key" translatable="false">pref_award_list_filter_watched_key</string>
    <string name="pref_award_list_filter_favourite_key" translatable="false">pref_award_list_filter_favourite_key</string>
    <string name="pref_award_list_filter_category_key" translatable="false">pref_award_list_filter_category_key</string>

</resources>
