<?xml version="1.0" encoding="utf-8"?>
<!-- The FrameLayout and the LinearLayout are required to get the correct styling,
     see styles.xml. -->
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutAwardListItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:gravity="center_vertical"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/imgPoster"
            android:layout_width="64dp"
            android:layout_height="80dp"
            android:scaleType="centerInside"
            android:contentDescription="@string/poster_description"
            tools:src="@mipmap/ic_launcher"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16dp">

            <TextView
                android:id="@+id/txtMovieTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Medium"
                tools:text="@string/example_movie_title" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@id/layoutAwardInfo"
                    android:layout_centerVertical="true">

                    <TextView
                        android:id="@+id/txtRuntime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@android:style/TextAppearance.Small"
                        tools:text="@string/example_movie_runtime" />

                    <!-- If genre is displayed in portrait mode, the list items are too cluttered -->
                    <TextView
                        android:id="@+id/txtGenre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@android:style/TextAppearance.Small"
                        android:visibility="gone"
                        tools:text="@string/example_movie_genre" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutAwardInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/imgCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="centerInside"
                        android:contentDescription="@string/category_text_movie"
                        tools:src="@drawable/ic_local_movies_24dp"/>

                    <TextView
                        android:id="@+id/txtAwardDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textAppearance="@android:style/TextAppearance.Small"
                        tools:text="@string/example_award_date" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
