<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutMovieInfo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:orientation="vertical"
    android:paddingStart="@dimen/detail_padding_horizontal"
    android:paddingEnd="@dimen/detail_padding_horizontal"
    android:paddingTop="@dimen/detail_movie_info_padding_top"
    android:paddingBottom="@dimen/detail_movie_info_padding_bottom"
    android:elevation="@dimen/detail_movie_info_elevation"
    app:elevation="@dimen/detail_movie_info_elevation"
    tools:context=".activity.MovieActivity">
    <!--
    android:background="#333"
    -->

    <!-- textAlignment="viewStart" is needed for RTL for any text that might wrap -->
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/detail_movie_info_title_padding_bottom"
        android:textAlignment="viewStart"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:lineSpacingMultiplier="0.9"
        tools:text="@string/example_movie_title" />
    <!--
        android:fontFamily="sans-serif-condensed"
        android:textSize="@dimen/detail_title_text_size"
    -->

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/layoutImdbLink"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/txtRuntime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/partially_transparent"
                android:textAppearance="@android:style/TextAppearance.Small"
                tools:text="@string/example_movie_runtime" />

            <TextView
                android:id="@+id/txtGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textColor="@color/partially_transparent"
                android:textAppearance="@android:style/TextAppearance.Small"
                tools:text="@string/example_movie_genre" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutImdbLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textColor="@color/partially_transparent"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:text="@string/imdb_link_text" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:scaleType="centerInside"
                android:contentDescription="@string/imdb_link_description"
                android:src="@drawable/ic_open_in_new_24dp"/>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
