<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for widget list items -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutWidgetListItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:minHeight="?android:attr/listPreferredItemHeightSmall"
    android:paddingTop="@dimen/widget_list_item_padding_vertical"
    android:paddingBottom="@dimen/widget_list_item_padding_vertical"
    android:paddingStart="@dimen/widget_list_item_padding_horizontal"
    android:paddingEnd="@dimen/widget_list_item_padding_horizontal"
    android:background="@color/green_50">

    <ImageView
        android:id="@+id/imgPoster"
        android:layout_width="32dp"
        android:layout_height="40dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/poster_description"
        tools:src="@mipmap/ic_launcher"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginStart="16dp">

        <TextView
            android:id="@+id/txtAwardDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceSmall"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/text_gray"
            tools:text="@string/example_award_date" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceMedium"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/text_gray"
            tools:text="@string/example_movie_title" />

    </LinearLayout>

</LinearLayout>
